//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class UserNotification
    {
        public System.Guid RowId { get; set; }
        public System.Guid UserId { get; set; }
        public System.Guid NotificationId { get; set; }
        public Nullable<bool> IsRead { get; set; }
        public string Description { get; set; }
    
        public virtual Notification Notification { get; set; }
        public virtual User User { get; set; }
    }
}
